fix scroll gap issue

--- a/style.css
+++ b/style.css
@@ -307,8 +307,7 @@ sub {
 }
 
 html {
-	overflow-y: scroll;
-	/* Keeps page centred in all browsers regardless of content height */
+	overflow-y: auto;
 	-webkit-text-size-adjust: 100%;
 	/* Prevents iOS text size adjust after orientation change, without disabling user zoom */
 	-ms-text-size-adjust: 100%;
